added all pages

--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 
 body {
-    font-family: Didot, Helvetica, sans-serif;
+    font-family: 'Merriweather', serif;
     background-color:#9bb9cf
+    
   }
 
  
